compiler/testData/diagnostics/tests/enum/inner/insideInnerClassNotAllowed.kt
class A {
    class B {
        <!ENUM_NOT_ALLOWED!>enum<!> class E {
            ENTRY
        }
    }
}
